# xlm-roberta-finetune

./: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json  run.sh
debug/: create_debug_dataset.py  debug.sh
scripts/: run.sh
src/: config.py  data_utils.py  inference.py  model_utils.py
src/finetuner/: config.py  data_utils.py  inference.py  model_utils.py  train.py
